fix: fixed developing block wrap

--- a/screens/about/DevelopingBlock.module.scss
+++ b/screens/about/DevelopingBlock.module.scss
@@ -1,20 +1,34 @@
 .container {
-  transform: scale(0.95);
-  transition: transform 1200ms cubic-bezier(0.03, 1.07, 0.53, 0.99);
-  transition-delay: 1000ms;
+  display: contents;
 }
 
 .text {
   color: var(--palette-container);
   position: relative;
 }
-.wrapper { 
-  position: relative;
-  margin-bottom: 24px;
-  margin-right: 12px;
+.wrapper {
+  &Left,
+  &Right {
+    position: relative;
+    margin: -4px 0px;
+    margin-bottom: 24px;
+    margin-right: 12px;
+    transform: scale(0.95);
+    transition: transform 1200ms cubic-bezier(0.03, 1.07, 0.53, 0.99);
+    transition-delay: 1000ms;
+  }
+
+  &Left {
+    transform-origin: center right;
+  }
+
+  &Right {
+    transform-origin: center left;
+  }
 }
 .backdrop {
-  &Left, &Right {
+  &Left,
+  &Right {
     position: absolute;
     top: 2px;
     left: -8px;
@@ -35,7 +49,8 @@
   }
 }
 .stub {
-  &Left, &Right {
+  &Left,
+  &Right {
     position: absolute;
     top: 1px;
     left: -9px;
@@ -61,12 +76,16 @@
 }
 
 .show {
-  &.container {
-    transform: scale(1);
+  .wrapper {
+    &Left,
+    &Right {
+      transform: scale(1);
+    }
   }
 
-  .stub{
-    &Left, &Right {
+  .stub {
+    &Left,
+    &Right {
       width: 0%;
     }
   }
